--- a/site.css
+++ b/site.css
@@ -1,8 +1,8 @@
-h2{
+h1{
   color: aqua
 }
 table, th, tr{
-  border: 2px solid black;
+  border: 2px solid rgb(245, 5, 5);
   border-collapse: collapse;
 }
 th, tr{
